--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">Room1</option>
-							<option value="Python">Room2</option>
-							<option value="PHP">Room3</option>
-							<option value="C#">Room4</option>
-							<option value="Ruby">Room5</option>
-							<option value="Java">Room6</option>
+							<option value="Room1">Room1</option>
+							<option value="Room2">Room2</option>
+							<option value="Room3">Room3</option>
+							<option value="Room4">Room4</option>
+							<option value="Room5">Room5</option>
+							<option value="Room6">Room6</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Room</button>
